--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <div class="btn-container">
           <button
             class="btn btn-color-2"
-            onclick="window.open('./assets/resume-example.pdf')"
+            onclick="window.open('./assets/DeepakCV.doc')"
           >
             Download CV
           </button>
@@ -77,7 +77,7 @@
       <div class="section-container">
         <div class="section__pic-container">
           <img
-            src="./assets/about-pic.png"
+            src="./assets/profilepic2.jpg"
             alt="Profile picture"
             class="about-pic"
           />
@@ -310,7 +310,7 @@
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="./assets/project-2.png"
+                src="./assets/memodemo.gif"
                 alt="Memorize"
                 class="project-img"
               />
