replaced photos with gif

--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="./assets/project-1.png"
+                src="./assets/kbc.gif"
                 alt="Kbc"
                 class="project-img"
               />
@@ -326,6 +326,7 @@
               <button
                 class="btn btn-color-2 project-btn"
                 onclick="location.href='https://github.com/'"
+                disabled
               >
                 Live Demo
               </button>
@@ -334,7 +335,7 @@
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="./assets/project-3.png"
+                src="./assets/ecommerce.gif"
                 alt="Project 3"
                 class="project-img"
               />
@@ -350,6 +351,7 @@
               <button
                 class="btn btn-color-2 project-btn"
                 onclick="location.href='https://github.com/'"
+                disabled
               >
                 Live Demo
               </button>
