--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
           <li><a href="#experience">Experience</a></li>
           <li><a href="#projects">Projects</a></li>
           <li><a href="#contact">Contact</a></li>
-          <li><a href="#blogs">Blogs</a></li>
         </ul>
       </div>
     </nav>
@@ -34,6 +33,7 @@
           <li><a href="#experience" onclick="toggleMenu()">Experience</a></li>
           <li><a href="#projects" onclick="toggleMenu()">Projects</a></li>
           <li><a href="#contact" onclick="toggleMenu()">Contact</a></li>
+          <li><a href="/blogs.html">Blogs</a></li>
         </div>
       </div>
     </nav>
